--- a/ktu-karjeros-dienos/index.html
+++ b/ktu-karjeros-dienos/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
 
-    <title>KTU - Karjeros dienos 2014</title>
+    <title>From Zero to Hero</title>
 
-    <meta name="description" content="KTU - Karjeros dienos 2014" />
+    <meta name="description" content="From Zero to Hero" />
     <meta name="author" content="Gediminas Morkevicius" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -14,15 +14,15 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <link rel="stylesheet" href="../revealjs/css/reveal.min.css" />
-    <link rel="stylesheet" href="../revealjs/css/theme/default.css" id="theme" />
+    <link rel="stylesheet" href="../revealjs/css/reveal.css" />
+    <link rel="stylesheet" href="../revealjs/css/theme/sky.css" id="theme" />
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="../revealjs/lib/css/zenburn.css" />
 
     <!-- If the query includes 'print-pdf', use the PDF print sheet -->
     <script>
-      document.write( '<link rel="stylesheet" href="../revealjs/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print" />' );
+      document.write('<link rel="stylesheet" href="../revealjs/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print" />');
     </script>
 
     <!--[if lt IE 9]>
@@ -58,9 +58,6 @@
         <section>
           <h3>Software engineer: from Zero to Hero</h3>
 
-          <br /><br />
-          <h4>KTU - Karjeros Dienos 2014</h4>
-
           <br />
           <a href="http://datadog.lt" target="_blank">
             <img id="work-at" src="img/datadog.png" height="70px" alt="Data-Dog" />
@@ -77,7 +74,7 @@
           <img src="img/me2-small.jpg" alt="Me" />
 
           <ul>
-            <li>I code with - <strong>PHP, Go, JavaScript, C</strong></li>
+            <li>I code with - <strong>PHP, Go, JavaScript, C, Java</strong></li>
             <li>And I'm hardcore - <strong>ViM, Arch Linux, DWM</strong> user</li>
             <li>An open source geek</li>
             <li>I share my stuff at <a href="https://github.com/l3pp4rd">github.com/l3pp4rd</a></li>
@@ -91,58 +88,77 @@
         </section>
 
         <section>
-          <h3>Open Source activist</h3>
-
-          <p><small>Author of <strong>Doctrine2 ORM extensions</strong></small></p>
-          <img src="img/ext.png" alt="Doctrine2 extensions repository" />
-
-          <p><small>Speaker at conferences:</small></p>
-
-          <ul>
-            <li class="fragment">Symfony2Con Warsaw 2013</li>
-            <li class="fragment">Kaunas PHP</li>
-            <li class="fragment">Vilnius PHP</li>
-          </ul>
-        </section>
-
-        <section>
           <h3>So how did it all start?</h3>
 
-          <p class="fragment"><strong>The first, second</strong> job..</p>
+          <p class="fragment"><strong>The first</strong> job..</p>
 
           <img class="fragment" src="img/first_job.jpg" alt="The first job" />
+
+          <p class="fragment">I worked hard to at least make something working..</p>
         </section>
 
         <section>
-          <h3>But I was dreaming about being..</h3>
+          <p>And <strong>the second</strong> job..</p>
 
-          <p class="fragment">A great salesman..</p>
+          <img class="fragment" src="img/hard.jpg" alt="The second job" />
 
-          <img class="fragment" src="img/salesman.jpg" alt="Salesman" />
-
-          <p class="fragment">So <strong>trust me</strong> I was there..</p>
+          <p class="fragment">But I was more confident in delivering something.. even if my code was looking like:</p>
         </section>
 
         <section>
-          <p>The job is always a concerning question..</p>
-
-          <img class="fragment" src="img/gs_darbas.png" alt="Google Search: darbas" />
-          <img class="fragment" src="img/gs_ieskau.png" alt="Google Search: ieskau" />
-          <img class="fragment" src="img/gs_noriu.png" alt="Google Search: noriu" />
-          <img class="fragment" src="img/gs_ar_verta.png" alt="Google Search: ar verta" />
+          <img src="img/bad_code.png" alt="bad code" />
         </section>
 
         <section>
-          <p>The job was so boring.. then I decided to develop an open source project</p>
-        </section>
+          <p>And <strong>the third</strong> job..</p>
 
-        <section>
-          <p>Soon after it started to become popular</p>
           <div class="fragment">
-            <p>I was invited to work at <strong>Knplabs</strong> in France, and it changed everything..</p>
+            <img src="img/detroit.jpg" width="450" alt="The third job" />
+            <p>Same as trying to restore an abandoned city like <strong>Detroit</strong>..</p>
+          </div>
+        </section>
+
+        <section>
+          <p>Pointless, as you may have guessed.. so I started an open source project</p>
+
+          <img class="fragment" src="img/ext.png" alt="Doctrine2 extensions repository" />
+        </section>
+
+        <section>
+          <p style="text-align:left"><strong>- Albert Einstein</strong></p>
+          <blockquote>&ldquo;Genius is 1% talent and 99% percent hard work...&rdquo;</blockquote>
+          <blockquote>&ldquo;The only source of knowledge is experience.&rdquo;</blockquote>
+        </section>
+
+        <section>
+          <p>Soon after it started to be more popular..</p>
+          <div class="fragment">
+            <p>I was invited to work at <strong>Knplabs</strong> in France, and it changed my experience a lot..</p>
             <img src="img/knplabs.jpg" alt="Knplabs" />
           </div>
-          <p class="fragment">And I still get various job proposals all over the world..</p>
+        </section>
+
+        <section>
+          <div class="fragment">
+            <p>Before, I was using Eclipse IDE</p>
+            <img src="img/eclipse.png" alt="eclipse" />
+          </div>
+          <div class="fragment">
+            <p>After, I was working with ViM</p>
+            <img src="img/vim.png" alt="vim" />
+          </div>
+        </section>
+
+        <section>
+          <p>How do I rate myself today with 10 years of experience?</p>
+
+          <p class="fragment">The answer is: the same as before 9 years, but without <strong>EGO</strong> I had then.</p>
+        </section>
+
+        <section>
+          <p>The following is <strong>true</strong> no matter how special you are..</p>
+
+          <img src="img/chart.jpg" alt="confidence and competence chart" width="750px"/>
         </section>
 
         <section>
@@ -160,9 +176,9 @@
         <section>
           <h3>Accepting failures in life</h3>
 
-          <p class="fragment">How you define yourself is how you define a failure.</p>
+          <p class="fragment">The more mistakes you make the better you get.</p>
+          <p class="fragment">Everything is an experiment.</p>
           <p class="fragment">Failure - is a step towards success.</p>
-          <p class="fragment">The longest journey begins with the first step and ones will follow after.</p>
         </section>
 
         <section>
@@ -179,7 +195,7 @@
     </div>
 
     <script src="../revealjs/lib/js/head.min.js"></script>
-    <script src="../revealjs/js/reveal.min.js"></script>
+    <script src="../revealjs/js/reveal.js"></script>
 
     <script>
 
