--- a/being-dangerous-with-git-rebase/index.html
+++ b/being-dangerous-with-git-rebase/index.html
@@ -14,8 +14,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="../revealjs/css/reveal.min.css">
-    <link rel="stylesheet" href="../revealjs/css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="../revealjs/css/reveal.css" />
+    <link rel="stylesheet" href="../revealjs/css/theme/sky.css" id="theme" />
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="../revealjs/lib/css/zenburn.css">
@@ -317,7 +317,7 @@ git rebase --continue</code></pre>
     </div>
 
     <script src="../revealjs/lib/js/head.min.js"></script>
-    <script src="../revealjs/js/reveal.min.js"></script>
+    <script src="../revealjs/js/reveal.js"></script>
 
     <script>
 
