--- a/doctrine-extensions/index.html
+++ b/doctrine-extensions/index.html
@@ -14,8 +14,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <link rel="stylesheet" href="../revealjs/css/reveal.min.css" />
-    <link rel="stylesheet" href="../revealjs/css/theme/default.css" id="theme" />
+    <link rel="stylesheet" href="../revealjs/css/reveal.css" />
+    <link rel="stylesheet" href="../revealjs/css/theme/sky.css" id="theme" />
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="../revealjs/lib/css/zenburn.css" />
@@ -481,7 +481,7 @@ try {
     </div>
 
     <script src="../revealjs/lib/js/head.min.js"></script>
-    <script src="../revealjs/js/reveal.min.js"></script>
+    <script src="../revealjs/js/reveal.js"></script>
 
     <script>
 
