you do not need a framework - gotalks slides

--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
     <div class="ol-list">
       <h2><small>GoTalks</small></h2>
       <ol>
-        <li><p><a href="http://gotalks.gediminasm.org/why-we-use-golang.slide#1"><em>Why we use GO</em></a> Some reasons why we chosen Golang as a secondary language at DATA-DOG.</p></li>
+        <li>
+          <p>
+            <a href="http://gotalks.gediminasm.org/why-we-use-golang/slides.slide#1">
+              <em>Why we use GO</em>
+            </a>
+            Some reasons why we chosen Golang as a secondary language at DATA-DOG.
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="http://gotalks.gediminasm.org/you-do-not-need-a-framework/slides.slide#1">
+              <em>You do not need a framework</em>
+            </a>
+            Some reasons why we chosen Golang as a secondary language at DATA-DOG.
+          </p>
+        </li>
       </ol>
     </div>
   </div>
