--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="ktu-karjeros-dienos/index.html"><em>From Zero to Hero</em></a> Presentation for students of KTU.</p></li>
         <li><p><a href="kickass-dev-environment/index.html"><em>Kick-ass dev environment</em></a> Every Hero needs an utility belt!</p></li>
         <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
+        <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
       </ol>
     </div>
     <div class="ol-list">
