two more images for git basics slides

--- a/datadog-git/index.html
+++ b/datadog-git/index.html
@@ -177,6 +177,11 @@ git status</code></pre>
           <section>
             <img src="imgs/stat1.png" alt="status" height="500px" />
           </section>
+
+          <section>
+            <p>What is next on our board?</p>
+            <img src="imgs/gopher-board.jpg" alt="status" height="500px" />
+          </section>
         </section>
 
         <section>
@@ -494,6 +499,12 @@ git rebase --continue</code></pre>
 
             <img src="imgs/after_split.png" alt="Commits after split rebase" />
           </section>
+        </section>
+
+        <section>
+          <p>I think we are done..</p>
+
+          <img src="imgs/done.jpg" alt="done" height="500px"/>
         </section>
 
         <section data-markdown>
