add slide reference to godog

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
             <a href="http://gotalks.gediminasm.org/you-do-not-need-a-framework/slides.slide#1">
               <em>You do not need a framework</em>
             </a>
-            Some reasons why we chosen Golang as a secondary language at DATA-DOG.
+            How to build applications without needing a framework.
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="http://gotalks.gediminasm.org/godog/slides.slide#1">
+              <em>Acceptance and integration testing with GO</em>
+            </a>
+            Introduction to <strong>godog</strong> BDD framework for go
           </p>
         </li>
       </ol>
