slides for ktu universite students

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="kickass-dev-environment/index.html"><em>Kick-ass dev environment</em></a> Every Hero needs an utility belt!</p></li>
         <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
         <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
+        <li><p><a href="ktu-2016-pask/index.html"><em>The path of software engineer</em></a> slides for KTU university students</p></li>
       </ol>
     </div>
     <div class="ol-list">
