--- a/ktu-2016-pask/index.html
+++ b/ktu-2016-pask/index.html
@@ -61,7 +61,7 @@
           <img src="img/two-paths.jpg" alt="Path" height="400px" />
         </section>
 
-        <section>
+        <section data-transition="zoom">
           <h4>My background</h4>
 
           <p>
@@ -73,17 +73,17 @@
           <p>About <strong>10 year</strong> experience in software development</p>
         </section>
 
-        <section>
+        <section data-transition="slide-in fade-out">
           <h4>A little about my carrier</h4>
 
           <img src="img/carrier1.png" height="600px" alt="Carrier" />
-        </section>
+        </section data-transition="slide-in fade-out">
 
-        <section>
+        <section data-transition="slide-in fade-out">
           <img src="img/carrier2.png" height="600px" alt="Carrier" />
         </section>
 
-        <section>
+        <section data-transition="slide-in fade-out">
           <h4>Author of some open source projects</h4>
 
           <img src="img/os-d2.png" alt="" />
@@ -91,7 +91,7 @@
           <img src="img/os-sqlmock.png" alt="" />
         </section>
 
-        <section>
+        <section data-transition="slide-in fade-out">
           <h3>Programming languages</h3>
 
           <ul>
@@ -102,7 +102,7 @@
           </ul>
         </section>
 
-        <section>
+        <section data-transition="zoom">
           <p style="text-align:left"><strong>- Albert Einstein</strong></p>
           <blockquote>&ldquo;Genius is 1% talent and 99% percent hard work...&rdquo;</blockquote>
           <blockquote>&ldquo;The only source of knowledge is experience.&rdquo;</blockquote>
@@ -116,6 +116,12 @@
         </section>
 
         <section>
+          <p>Do not overestimate yourself</p>
+
+          <img src="img/cat-sees-lion-mirror.jpg" alt="Cat sees lion in the mirror" width="500px" class="fragment"/>
+        </section>
+
+        <section>
           <p>There are a lot of trending technologies<span class="fragment">, but they do not invent nothing new</span></p>
 
           <p class="fragment">stop chasing the trends and learn fundamentals</p>
@@ -123,22 +129,76 @@
 
         <section>
           <ol>
-            <li>Networking - TCP/IP</li>
-            <li>HTTP protocol</li>
-            <li>Procedural and functional programming</li>
-            <li>MVC design pattern</li>
+            <li class="fragment">Networking - TCP/IP</li>
+            <li class="fragment">HTTP protocol and server</li>
+            <li class="fragment">IO - request / response life cycle. How it works in the web browser.</li>
+            <li class="fragment">Procedural and functional programming</li>
+            <li class="fragment">MVC design pattern</li>
+            <li class="fragment">Linux and Unix</li>
           </ol>
         </section>
 
         <section>
-          <h3>What traits I think were the reason?</h3>
+          <p>Take small incremental steps in everything you do.</p>
+
+          <div class="fragment">
+            <p><strong>don't end up consuming..</strong></p>
+            <img src="img/prozac.jpg" height="200px" alt="Prozac pills"/>
+          </div>
+        </section>
+
+        <section>
+          <p>Not all suggestions may apply to you.</p>
+
+          <img src="img/kaip.png" class="fragment" alt="Google search suggestions - kaip" />
+          <img src="img/kodel_jis.png" class="fragment" alt="Google search suggestions - kodel jis" />
+          <img src="img/kodel_jis_ma.png" class="fragment" alt="Google search suggestions - kodel jis ma" />
+          <img src="img/kodel_jam.png" class="fragment" alt="Google search suggestions - kodel jam" />
+          <img src="img/kodel_jai.png" class="fragment" alt="Google search suggestions - kodel jai" />
+        </section>
+
+        <section>
+          <p>Which programming language to learn</p>
+
+          <img src="img/which-language.jpg" height="500px" alt="Which language to learn"/>
+        </section>
+
+        <section>
+          <p>The safe bet..</p>
+
+          <ol>
+            <li class="fragment"><strong>PHP</strong> - still 90% of the web applications, easy to learn and start.</li>
+            <li class="fragment"><strong>Java</strong> - most enterprise applications. Better salaries, but may be boring.</li>
+            <li class="fragment"><strong>HTML,CSS,Javascript</strong> - web is all over the place this decade.</li>
+          </ol>
+        </section>
+
+        <section>
+          <p>If you love what you do and work hard enough..</p>
+
+          <p class="fragment">Most probably, you can run for your goals whatever they are.</p>
+        </section>
+
+        <section>
+          <p><strong>90%</strong> of startups fail<span class="fragment">, be aware of that.</span></p>
+
+          <div class="fragment">
+            <p>I have worked on <strong>two</strong> startups, both of them <strong>failed</strong></p>
+            <img src="img/startup_postmortem.jpg" height="250px" alt="failed startup"/>
+          </div>
+        </section>
+
+        <section>
+          <h3>What traits I think are important?</h3>
 
           <ul>
-            <li class="fragment">Thinking outside the box.</li>
-            <li class="fragment">Open source activity.</li>
-            <li class="fragment">Quality</li>
-            <li class="fragment">Taking risks, investing free time.</li>
-            <li class="fragment">Love to what I do.</li>
+            <li class="fragment">Think outside the box.</li>
+            <li class="fragment">Contribute to open source.</li>
+            <li class="fragment">Work with smarter than you - people.</li>
+            <li class="fragment">Follow smart people, not trendy rockstars.</li>
+            <li class="fragment">Stream for the best quality.</li>
+            <li class="fragment">Take risks, invest spare time.</li>
+            <li class="fragment">Love what you do.</li>
           </ul>
         </section>
 
@@ -150,7 +210,7 @@
           <p class="fragment">Failure - is a step towards success.</p>
         </section>
 
-        <section>
+        <section data-transition="zoom">
           <h3>Thank you</h3>
 
           <img src="img/question_everything.jpg" height="400px" alt="Questions?" />
