--- a/ktu-2016-pask/index.html
+++ b/ktu-2016-pask/index.html
@@ -55,7 +55,7 @@
     <div class="reveal">
       <div class="slides">
 
-        <section>
+        <section data-transition="zoom">
           <h3>The path of software engineer</h3>
 
           <img src="img/two-paths.jpg" alt="Path" height="400px" />
@@ -129,12 +129,12 @@
 
         <section>
           <ol>
-            <li class="fragment">Networking - TCP/IP</li>
             <li class="fragment">HTTP protocol and server</li>
             <li class="fragment">IO - request / response life cycle. How it works in the web browser.</li>
             <li class="fragment">Procedural and functional programming</li>
             <li class="fragment">MVC design pattern</li>
             <li class="fragment">Linux and Unix</li>
+            <li class="fragment">Networking - TCP/IP, TLS</li>
           </ol>
         </section>
 
