--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
         <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
         <li><p><a href="ktu-2016-pask/index.html"><em>The path of software engineer</em></a> slides for KTU university students</p></li>
+        <li><p><a href="things-i-fucked-up/index.html"><em>Things I fucked up</em></a> screw ups I made during my career</p></li>
       </ol>
     </div>
     <div class="ol-list">
