add more fail variants

--- a/things-i-fucked-up/index.html
+++ b/things-i-fucked-up/index.html
@@ -163,9 +163,44 @@ gulp.task('package', function () {
           <h3>Fail recipe #3</h3>
 
           <p class="fragment">Transaction management</p>
-
         </section>
 
+        <section>
+          <h3>Fail recipe #4</h3>
+
+          <p class="fragment">Unreadable and unmaintanable code</p>
+        </section>
+
+        <section>
+          <h3>Fail recipe #5</h3>
+
+          <div class="fragment">
+            <p>I've badly prepared for this presentation</p>
+
+            <img src="img/facepalm.png" height="400px" alt="Fail" />
+          </div>
+        </section>
+
+        <section>
+          <h3>Epic fail</h3>
+
+          <div class="fragment">
+            <p>Develop everything in smallest possible steps<span class="fragment">, otherwise you might not finish anything..</span></p>
+            <img src="img/babysteps.jpg" height="400px" alt="Fail" />
+          </div>
+        </section>
+
+        <section>
+          <p>Initial commit on DoctrineExtensions</p>
+
+          <img src="img/d2.png" height="400px" alt="Fail" />
+        </section>
+
+        <section>
+          <p>I failed so many projects, because I tried to publish something better, bigger, nicer</p>
+
+          <img src="img/unfinished.jpg" width="600px" alt="Fail" />
+        </section>
       </div>
 
     </div>
