add schedule examples

--- a/travelling-salesman/index.html
+++ b/travelling-salesman/index.html
@@ -97,6 +97,61 @@
           <p class="fragment">We solve <strong>hard</strong> problems</p>
         </section>
 
+        <section>
+          <p>We are developing sofware for grocery supply chain</p>
+
+          <p>Which compared to <strong>Maxima</strong> in baltic states</p>
+
+          <p class="fragment">is at least <strong>5</strong> times bigger</p>
+
+          <p class="fragment">has around <strong>200</strong> depots in the region we work with</p>
+        </section>
+
+        <section>
+          <p>What are we doing there?</p>
+
+          <ul>
+            <li>Routing solution</li>
+            <li>Scheduling</li>
+            <li>Optimization</li>
+          </ul>
+
+          <p class="fragment">and these are <strong>hard</strong> problems</p>
+        </section>
+
+        <section>
+          <p>Vehicle routing problems</p>
+
+          <p class="fragment">How many possible routes there may be within <strong>24</strong> points?</p>
+          <p class="fragment">
+            <img class="no-border" src="img/routing-problem.png" height="500px" alt="Routing problem"/>
+          </p>
+        </section>
+
+        <section>
+          <p>First of all, you have to lower the number of possibilities</p>
+
+          <p class="fragment">and make <strong>trade offs</strong></p>
+
+          <div class="fragment">
+            <p>A similar solution to our - <strong>Oracle ORS</strong> uses a Super-PC with <strong>400 CPUs</strong></p>
+            <img class="no-border" src="img/super-pc.jpg" height="400px" alt="Super PC"/>
+          </div>
+        </section>
+
+        <section>
+          <p>Imagine a schedule..</p>
+
+          <img class="no-border" src="img/schedule.png" height="600px" alt="Schedule"/>
+        </section>
+
+        <section>
+          <p>Lets make it harder</p>
+
+          <p class="fragment">Every drop may be allocated to a time slot</p>
+
+          <img class="no-border" src="img/schedule-slots.png" height="600px" alt="Schedule"/>
+        </section>
       </div>
 
     </div>
