other routing stuff to talk about

--- a/travelling-salesman/index.html
+++ b/travelling-salesman/index.html
@@ -129,6 +129,17 @@
         </section>
 
         <section>
+          <p>Other routing problems</p>
+
+          <ol>
+            <li>Speed at specific hour</li>
+            <li>Blocked or restricted roads, public events</li>
+            <li>Right hand turns</li>
+            <li>Types of roads, size</li>
+          </ol>
+        </section>
+
+        <section>
           <p>First of all, you have to lower the number of possibilities</p>
 
           <p class="fragment">and make <strong>trade offs</strong></p>
