add ref to main page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
         <li><p><a href="ktu-2016-pask/index.html"><em>The path of software engineer</em></a> slides for KTU university students</p></li>
         <li><p><a href="things-i-fucked-up/index.html"><em>Things I fucked up</em></a> screw ups I made during my career</p></li>
+        <li><p><a href="travelling-salesman/index.html"><em>Travelling Salesman</em></a> routing, scheduling and optimization problems</p></li>
       </ol>
     </div>
     <div class="ol-list">
