add dbs internal training slides

--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
     <div class="ol-list">
       <h2><small>Talks</small></h2>
       <ol>
-        <li><p><a href="being-dangerous-with-git-rebase/index.html"><em>Being dangerous with git</em></a> How and why you need to learn rebase.</p></li>
-        <li><p><a href="doctrine-extensions/index.html"><em>Doctrine behavioral extensions</em></a> How to increase productivity with doctrine extensions if you use Doctrine2 ORM.</p></li>
+        <li><p><a href="datadog-dbs/index.html"><em>Databases</em></a> things you should know about databases</p></li>
+        <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
         <li><p><a href="testing-by-example/index.html"><em>TDD by example</em></a> How and why I use TDD.</p></li>
         <li><p><a href="ktu-karjeros-dienos/index.html"><em>From Zero to Hero</em></a> Presentation for students of KTU.</p></li>
         <li><p><a href="kickass-dev-environment/index.html"><em>Kick-ass dev environment</em></a> Every Hero needs an utility belt!</p></li>
-        <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
-        <li><p><a href="datadog-git/index.html"><em>GIT basics</em></a> internal trainings in DATA-DOG</p></li>
-        <li><p><a href="ktu-2016-pask/index.html"><em>The path of software engineer</em></a> slides for KTU university students</p></li>
-        <li><p><a href="things-i-fucked-up/index.html"><em>Things I fucked up</em></a> screw ups I made during my career</p></li>
         <li><p><a href="travelling-salesman/index.html"><em>Travelling Salesman</em></a> routing, scheduling and optimization problems</p></li>
+        <li><p><a href="things-i-fucked-up/index.html"><em>Things I fucked up</em></a> screw ups I made during my career</p></li>
+        <li><p><a href="ktu-2016-pask/index.html"><em>The path of software engineer</em></a> slides for KTU university students</p></li>
+        <li><p><a href="trending-web-tech/index.html"><em>Trending web technologies</em></a> Or we can cut it down to <strong>Angular</strong> and <strong>React</strong></p></li>
+        <li><p><a href="doctrine-extensions/index.html"><em>Doctrine behavioral extensions</em></a> How to increase productivity with doctrine extensions if you use Doctrine2 ORM.</p></li>
+        <li><p><a href="being-dangerous-with-git-rebase/index.html"><em>Being dangerous with git</em></a> How and why you need to learn rebase.</p></li>
       </ol>
     </div>
     <div class="ol-list">
