links new gotalk in slides page

--- a/index.html
+++ b/index.html
@@ -52,10 +52,18 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
       <ol>
         <li>
           <p>
-            <a href="http://gotalks.gediminasm.org/why-we-use-golang/slides.slide#1">
-              <em>Why we use GO</em>
+            <a href="http://gotalks.gediminasm.org/golang-performance/slides.slide#1">
+              <em>Intro to golang performance</em>
             </a>
-            Some reasons why we chosen Golang as a secondary language at DATA-DOG.
+            Going through some examples of web server implementations and analyzing performance.
+          </p>
+        </li>
+        <li>
+          <p>
+            <a href="http://gotalks.gediminasm.org/godog/slides.slide#1">
+              <em>Acceptance and integration testing with GO</em>
+            </a>
+            Introduction to <strong>godog</strong> BDD framework for go
           </p>
         </li>
         <li>
@@ -68,10 +76,10 @@ h2 small{ font-size: 20px; text-transform:uppercase; letter-spacing: 14px; displ
         </li>
         <li>
           <p>
-            <a href="http://gotalks.gediminasm.org/godog/slides.slide#1">
-              <em>Acceptance and integration testing with GO</em>
+            <a href="http://gotalks.gediminasm.org/why-we-use-golang/slides.slide#1">
+              <em>Why we use GO</em>
             </a>
-            Introduction to <strong>godog</strong> BDD framework for go
+            Some reasons why we chosen Golang as a secondary language at DATA-DOG.
           </p>
         </li>
       </ol>
